--- a/src/main/resources/templates/errors/error.html
+++ b/src/main/resources/templates/errors/error.html
@@ -28,7 +28,7 @@
     <div class="container flex-fill">
 
         <div class="row justify-content-center" style="margin-top: 5%">
-            <h3>Oops! An error occured. Please try again later.</h3>
+            <h3 th:text="${error}"></h3>
         </div>
 
 
