--- a/src/main/resources/templates/movie-plans/add-movie-plan.html
+++ b/src/main/resources/templates/movie-plans/add-movie-plan.html
@@ -20,48 +20,22 @@
     <link th:href="@{/css/style.css}" href="/static/css/style.css" rel="stylesheet" type="text/css"/>
 
     <!-- Page Title -->
-    <title>Bio Trio Cinema | Add User</title>
+    <title>Bio Trio Cinema | Add movie plan</title>
 </head>
 <body>
 <div class="d-flex flex-column sticky-footer-wrapper">
     <div th:insert="~{/fragments/header :: header}"></div>
-
     <div class="container flex-fill">
         <section class="mb-4">
 
             <!--Section heading-->
-            <h2 class="h1-responsive font-weight-bold text-center my-4">Add user</h2>
+            <h2 class="h1-responsive font-weight-bold text-center my-4">Add movie plan</h2>
             <div class="row contact_form">
 
                 <!--Grid column-->
                 <div class="col-md-12 mb-md-0 mb-5">
-                    <form class="text-center border border-light p-5" method="post" action="/add-user/save" th:object="${newUser}">
-
-                        <input type="hidden" id="user_id" th:field="${newUser.user_id}" name="id">
-
-                        <!--Grid row-->
-                        <div class="row">
-                            <!-- Username -->
-                            <!--Grid column-->
-                            <div class="col-md-6" style="margin-bottom: 2%">
-                                <div class="md-form mb-0">
-                                    <label>Username</label>
-                                    <input type="text" id="username" name="username" th:field="${newUser.username}" class="form-control mb-4">
-                                </div>
-                            </div>
-                            <!--Grid column-->
-
-                            <!-- Password -->
-                            <!--Grid column-->
-                            <div class="col-md-6" style="margin-bottom: 2%">
-                                <div class="md-form mb-0">
-                                    <label>Password</label>
-                                    <input type="password" id="password" name="password" th:field="${newUser.password}" class="form-control mb-4">
-                                </div>
-                            </div>
-                            <!--Grid column-->
-                        </div>
-                        <!--Grid row-->
+                    <form class="text-center border border-light p-5" method="post" action="/add-movie-plan/save" th:object="${moviePlan}">
+                        <input type="hidden" id="user_id" th:field="${moviePlan.movie_plan_id}" name="id">
 
                         <!--Grid row-->
                         <div class="row">
@@ -69,11 +43,11 @@
                             <!--Grid column-->
                             <div class="col-md-6" style="margin-bottom: 2%">
                                 <div class="md-form mb-0">
-                                    <!-- Role -->
-                                    <label>Role</label>
-                                    <select th:field="${newUser.role}" class="form-control mb-4">
-                                        <option value="ROLE_MANAGER"> MANAGER</option>
-                                        <option value="ROLE_EMPLOYEE"> EMPLOYEE</option>
+                                    <!-- Movie -->
+                                    <label>Movie</label>
+                                    <select th:field="${moviePlan.movie_id}" class="form-control mb-4">
+                                        <option th:each="movie: ${movies}" th:value="${movie.movie_id}"><span
+                                                th:text="${movie.type} ? ${movie.movieDetails.name} + ' : 3D' : ${movie.movieDetails.name} + ' : 2D'"></span></option>
                                     </select>
                                 </div>
                             </div>
@@ -82,14 +56,36 @@
                             <!--Grid column-->
                             <div class="col-md-6" style="margin-bottom: 2%">
                                 <div class="md-form mb-0">
-                                    <!-- Enabled -->
-                                    <h6>Enabled</h6>
-                                    <label class="switch" for="enabled">
-                                        <!--<input th:="${movieForm.type}" type="checkbox">-->
-                                        <!--<input type="checkbox" id="enabled" name="a" value="3D" class="form-control mb-4 switch">-->
-                                        <input type="checkbox" id="enabled" name="a" th:field="${newUser.enabled}" class="form-control mb-4 switch">
-                                        <span class="slider round"></span>
-                                    </label>
+                                    <!-- Theater -->
+                                    <label>Theater</label>
+                                    <select th:field="${moviePlan.theater_room_id}" class="form-control mb-4">
+                                        <option th:each="theaterRoom: ${theaterRooms}" th:value="${theaterRoom.theater_room_id}"><span
+                                                th:text="${theaterRoom.capability_3d} ? ${theaterRoom.name} + ' : 3D Support' : ${theaterRoom.name} + ' : No 3D Support'"></span></option>
+                                    </select>
+                                </div>
+                            </div>
+                            <!--Grid column-->
+                        </div>
+                        <!--Grid row-->
+
+                        <!--Grid row-->
+                        <div class="row">
+                            <!--Grid column-->
+                            <div class="col-md-6" style="margin-bottom: 2%">
+                                <div class="md-form mb-0">
+                                    <!-- Date and Time -->
+                                    <label>Date and Time</label>
+                                    <input type="datetime-local" id="dateTime" name="dateTime" th:field="${moviePlan.date_time}" class="form-control mb-4" required/>
+                                </div>
+                            </div>
+                            <!--Grid column-->
+
+                            <!--Grid column-->
+                            <div class="col-md-6" style="margin-bottom: 2%">
+                                <div class="md-form mb-0">
+                                    <!-- Price -->
+                                    <label>Price</label>
+                                    <input type="text" id="price" name="price" th:field="${moviePlan.price}" class="form-control mb-4" required>
                                 </div>
                             </div>
                             <!--Grid column-->
@@ -97,16 +93,20 @@
                         <!--Grid row-->
 
                         <!-- Send button -->
-                        <button type="submit" class="empty-button btn btn-default">Save</button>
+                        <div class="text-center">
+                            <button type="submit" class="empty-button btn btn-default">
+                                Save
+                            </button>
+                        </div>
                     </form>
                 </div>
             </div>
         </section>
     </div>
-
-<!--Insert footer fragment-->
-<div th:insert="~{/fragments/footer :: footer}"></div>
+    <!--Insert footer fragment-->
+    <div th:insert="~{/fragments/footer :: footer}"></div>
 </div>
+
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
