--- a/src/main/resources/templates/users/edit-user-password.html
+++ b/src/main/resources/templates/users/edit-user-password.html
@@ -55,7 +55,7 @@
                                     <div class="md-form mb-0">
                                         <!-- Password -->
                                         <label>New Password</label>
-                                        <input type="text" id="password" name="password" th:field="${editedUserPass.password}" class="form-control mb-4">
+                                        <input type="password" id="password" name="password" th:field="${editedUserPass.password}" class="form-control mb-4" required>
                                     </div>
                                 </div>
                                 <!--Grid column-->
